--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,100 @@
+@font-face {
+    font-family: "Caprasimo";
+    src: url(../fonts/Caprasimo-Regular.ttf);
+}
+@font-face {
+    font-family: "Rowdies";
+    src: url(../fonts/Rowdies-Regular.ttf);
+}
+
 body {
     background-image: url(../imagens/bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
+    font-family: "Caprasimo", Impact, sans-serif;
+}
+
+h1{
+    color: brown;
+}
+
+hr {
+    color:brown;
 }
 
 .placa {
     float: left;
-    margin: 6vh 10%;
+    margin: 6vh 4% auto 10%;
+    max-width: 40%;
 }
 
 .principal {
     float: right;
-    margin: 300px 14% auto auto;
+    margin: 31vh 12% auto auto;
+    max-width: 30%;
 }
 
 .mensagem-principal {
-    font-size: 3rem;
+    font-size: 3.5rem;
+    color: #eda776;
 }
 
 .link {
-    border: solid 1px white;
-    padding: 15px 10px;
-    font-size: 1.3rem;
+    border: solid 1px burlywood;
+    background-color: #aa880011;
+    padding: 20px 15px;
+    font-size: 1.1rem;
     text-decoration: none;
-    color: white;
+    color: burlywood;
+    transition: 0.3s;
+}
+
+.link:hover{
+    background-color: #aa880033;
+    transition: 0.8s;
+    font-size: 1.3rem;
+    color: #bc9665;
+}
+
+.placa-correio {
+    float: right;
+    margin: 25vh 8% auto 5%;
+    max-width: 40%;
+}
+
+form > label, legend {
+    font-size: 1.2rem;
+    line-height: 2.0;
+}
+
+form > label{
+    display: block;
+}
+
+#nome, #nome-rem {
+    width: 30%;
+    margin-bottom: 2vh;
+}
+
+fieldset{
+    margin-bottom: 2vh;
+}
+
+#msg {
+    display: block;
+}
+
+input {
+    padding: 5px 6px;
+    font-size: 15px;
+}
+
+#button-send {
+    padding: 10px 15px;
+}
+
+#msg {
+    columns:"80";
 }
